fix(sdk): verify consumer builds and preserve Android JNI callbacks